--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-dropdown-picker": "^3.7.6",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-icon-badge": "^1.1.3",
     "react-native-numeric-input": "^1.8.3",
     "react-native-paper": "^4.4.1",
     "react-native-pixel-perfect": "^1.0.2",
+    "react-native-progress-steps": "^1.3.4",
     "react-native-reanimated": "^1.13.2",
     "react-native-screens": "^2.15.0",
     "react-native-simple-radio-button": "^2.7.4",
