--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.12.8",
     "@types/react-native-snap-carousel": "^3.8.2",
     "expo": "~39.0.2",
+    "expo-google-app-auth": "^8.1.4",
     "expo-linear-gradient": "^8.4.0",
     "expo-status-bar": "~1.0.2",
     "jwt-decode": "^3.1.2",
